--- a/groupomania/src/app/app.component.html
+++ b/groupomania/src/app/app.component.html
@@ -3,6 +3,7 @@
   <nav>
     <a routerLink="/signup">Signup</a>
     <a routerLink="/login">Login</a>
+    <a routerLink="/timeline">Fil d'actualité</a>
   </nav>
   <router-outlet></router-outlet>
 </div>
