--- a/groupomania/src/app/user-profile/user-profile.component.html
+++ b/groupomania/src/app/user-profile/user-profile.component.html
@@ -1,47 +1,12 @@
 <h2>Profil</h2>
-<div *ngIf="!loading">
+<div>
     Prénom: {{ user?.firstname }} <br>
     Nom: {{ user?.lastname }} <br>
     Email: {{ user?.email }} <br>
-    Photo: <img src="{{ user?.imageUrl }}" alt="">
-
+    Image: <img src="{{ user?.imageUrl }}" alt="">
 </div>
-<button mat-raised-button color="primary">Modifier mon profil</button>
+<button mat-raised-button color="primary" (click)="onModify()">Modifier mon profil</button>
 <p class="text-danger" *ngIf="errorMsg">{{ errorMsg }}</p>
 
 
 <div>
-
-    <h2>Modifiez votre profil</h2>
-
-    <div>
-        <div>
-            <form [formGroup]="updateForm" *ngIf="updateForm">
-                <div class="form-group">
-                    <label for="firstname" required>Prénom: {{ user?.firstname }}</label>
-                    <input type="firstname" class="form-control" id="firstname" formControlName="firstname">
-
-                    <label for="lastname" required>Nom: {{ user?.lastname }}</label>
-                    <input type="lastname" class="form-control" id="lastname" formControlName="lastname">
-
-                    <label for="email" required>Email: {{ user?.email }}</label>
-                    <input type="email" class="form-control" id="email" formControlName="email">
-
-                    <input type="file" accept="image/*" #imageInput (change)="onFileAdded($event)">
-                    <button mat-raised-button color="primary" (click)="imageInput.click()">ADD IMAGE</button>
-                    <img [src]="imagePreview" *ngIf="imagePreview"
-                        style="max-height: 100px;display:block;margin-top:10px">
-
-                    <label for="password" required>password: </label>
-                    <input type="password" class="form-control" id="password" formControlName="password">
-                </div>
-            </form>
-
-        </div>
-
-        <div>
-            <button [disabled]="updateForm.invalid" (click)="onUpdate()">Éditer mon profil</button>
-            <button mat-raised-button color="warn" [disabled]="updateForm.invalid" (click)="onDelete()">DELETE</button>
-        </div>
-
-    </div>
