--- a/groupomania/src/app/timeline/timeline.component.html
+++ b/groupomania/src/app/timeline/timeline.component.html
@@ -1,41 +1,29 @@
 <a routerLink="/user-profile">Profil</a>
 
-<mat-spinner *ngIf="loading"></mat-spinner>
-<form [formGroup]="mediaForm" *ngIf="!loading">
-  <div class="form-group">
-    <label for="title">Titre</label>
-    <input type="text" class="form-control" id="title" formControlName="title">
-  </div>
-  <div class="form-group">
-    <input type="file" accept="image/*" #imageInput (change)="onFileAdded($event)">
-    <button mat-raised-button color="primary" (click)="imageInput.click()">ADD IMAGE</button>
-    <img [src]="imagePreview" *ngIf="imagePreview" style="max-height: 100px;display:block;margin-top:10px">
-    <label for="mediaUrl">Image</label>
-    <input type="file" class="form-control" id="mediaUrl" formControlName="mediaUrl">
-  </div>
+<button mat-button [matMenuTriggerFor]="menu" #menuTrigger>Publier</button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item (click)="openMessageDialog()">Message</button>
+  <button mat-menu-item (click)="openMediaDialog()">Photo</button>
+</mat-menu>
 
-  <button mat-raised-button color="primary" (click)="onMedia()">SUBMIT</button>
-</form>
+<mat-card class="example-card" *ngFor="let post of posts;" >
 
-<form [formGroup]="messageForm" *ngIf="!loading">
-  <div class="form-group">
-    <label for="content">Titre</label>
-    <input type="text" class="form-control" id="content" formControlName="content">
-  </div>
-  <button mat-raised-button color="primary" (click)="onMessage()">SUBMIT</button>
-</form> 
+  <mat-card-header>
+    <img mat-card-avatar class="example-header-image" [src]="post.user?.imageUrl">
+    <mat-card-title>{{ post.user.firstname }} {{ post.user.lastname }}</mat-card-title>
+    
+  </mat-card-header>
+  
+  <mat-card-content (click)="onClickPost(post.post_id)">
+    <h1>{{ post.title }}</h1>
+    <img mat-card-image [src]="post.mediaUrl" alt="">
+    <p>
+      {{ post.content }}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <div *ngIf="post.likes">{{ post.likes.length }}</div>
+    <button mat-button (click)="onLike(post.post_id)">LIKE</button>
+  </mat-card-actions>
 
-<ol>
-  <li>
-    <mat-form-field>
-      <mat-label>What's your name?</mat-label>
-      <input matInput [(ngModel)]="name">
-    </mat-form-field>
-  </li>
-  <li>
-    <button mat-raised-button (click)="openDialog()">Pick one</button>
-  </li>
-  <li *ngIf="animal">
-    You chose: <i>{{animal}}</i>
-  </li>
-</ol>
+</mat-card>
