--- a/groupomania/src/app/single-post/single-post.component.scss
+++ b/groupomania/src/app/single-post/single-post.component.scss
@@ -3,3 +3,13 @@
     margin: auto;
     margin-bottom: 30px;
   }
+
+  .example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
