--- a/groupomania/src/app/app.component.html
+++ b/groupomania/src/app/app.component.html
@@ -1,38 +1,76 @@
-<!--<app-header></app-header>-->
+
+
+
+<title>Groupomania</title>
 <div class="container">
   <mat-toolbar>
-    <a class="logo" routerLink="/timeline"><img src="../assets/logo-navbar-color.png" alt="Logo Groupomania"></a>
-    <!--<button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>account_circle</mat-icon>
-      </button>
+    <a routerLink="/timeline" class="logo"><img src="../assets/logo-navbar-color.png" alt="Logo Groupomania"></a>
+    <a routerLink="/timeline" class="logoTablet"><img src="../assets/icon.png" alt="Logo Groupomania"></a>
+    <div class="responsive">
+    <div class="hover-info homeb">
+      <a mat-icon-button class="example-icon home" routerLink="/timeline" *ngIf="AuthGuard.isLoggedin">
+        <mat-icon>home</mat-icon>
+      </a>
+      <div class="info home-info">Fil d'actualité</div>
+    </div>
+
+    <div class="hover-info accountb">
+      <a mat-icon-button class="example-icon account" routerLink="/user-profile" *ngIf="AuthGuard.isLoggedin">
+        <mat-icon>account_circle</mat-icon>
+      </a>
+      <div class="info account-info">Profil</div>
+    </div>
+
+    <div class="hover-info logoutb">
+      <a mat-icon-button class="example-icon logout" routerLink="/logout" (click)="onLogout()"
+        *ngIf="AuthGuard.isLoggedin">
+        <mat-icon>logout</mat-icon>
+      </a>
+      <div class="info logout-info">Se déconnecter</div>
+    </div>
+
+    <div class="hover-info signupb" *ngIf="!AuthGuard.isLoggedin">
+      <a mat-icon-button class="example-icon signup" routerLink="/signup">
+        <mat-icon>person_add</mat-icon>
+      </a>
+      <div class="info signup-info">S'inscrire</div>
+    </div>
+
+    <div class="hover-info signinb" *ngIf="!AuthGuard.isLoggedin">
+      <a mat-icon-button class="example-icon signin" routerLink="/login">
+        <mat-icon>login</mat-icon>
+      </a>
+      <div class=" info signin-info">Se connecter</div>
+    </div>
+  </div>
+
+    <button mat-button [matMenuTriggerFor]="menu" *ngIf="AuthGuard.isLoggedin" class="menuBurger"><mat-icon>menu</mat-icon></button>
+    <mat-menu #menu="matMenu">
+      <a mat-menu-item mat-menu-item class="example-icon home" routerLink="/timeline" *ngIf="AuthGuard.isLoggedin">
+        <mat-icon>home</mat-icon> Fil d'actualité
+      </a>
+      <a mat-menu-item mat-menu-item class="example-icon account" routerLink="/user-profile" *ngIf="AuthGuard.isLoggedin">
+        <mat-icon>account_circle</mat-icon>Profil
+      </a>
+      <a mat-menu-item class="example-icon logout" routerLink="/logout" (click)="onLogout()"
+        *ngIf="AuthGuard.isLoggedin">
+        <mat-icon>logout</mat-icon>Se déconnecter
+      </a>   
+    </mat-menu>
+
+    <button mat-button [matMenuTriggerFor]="menuLogout" *ngIf="!AuthGuard.isLoggedin" class="menuBurger"><mat-icon>menu</mat-icon></button>
+    <mat-menu #menuLogout="matMenu">
+      <a mat-menu-item class="example-icon signup" routerLink="/signup">
+        <mat-icon>person_add</mat-icon>S'inscrire
+      </a>
       
-    
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>logout</mat-icon>
-    </button>-->
-    <div class="navbar-icon profil-b">
-    <a mat-icon-button class="example-icon favorite-icon profil-icon" routerLink="/user-profile"*ngIf="AuthGuard.isLoggedin"><mat-icon>account_circle</mat-icon></a>
-    <div class="label-hover profil">Mon profile</div>
-  </div>
-  <div class="navbar-icon home-b">
-    <a class="timelineIcon"  mat-icon-button class="example-icon home-icon" routerLink="/timeline" *ngIf="AuthGuard.isLoggedin"><mat-icon>home</mat-icon></a>
-    <div class="label-hover home">Fil d'actualité</div>
-  </div>
-  <div class="navbar-icon logout-b">
-    <a mat-icon-button class="example-icon logout-icon" routerLink="/logout" *ngIf="AuthGuard.isLoggedin" (click)="onLogout()"><mat-icon>logout</mat-icon></a>
-    <div class="label-hover logout">Se déconnecter</div>
-  </div>
-    <a mat-icon-button class="example-icon" routerLink="/signup" *ngIf="!AuthGuard.isLoggedin"><mat-icon>person_add</mat-icon></a>
-    <a mat-icon-button class="example-icon" routerLink="/login" *ngIf="!AuthGuard.isLoggedin"><mat-icon>login</mat-icon></a>
+
+      <a mat-menu-item class="example-icon signin" routerLink="/login">
+        <mat-icon>login</mat-icon>Se connecter
+      </a>
+    </mat-menu>
+
   </mat-toolbar>
-  
-  <nav>
-    <!--<a routerLink="/user-profile"*ngIf="AuthGuard.isLoggedin">Profil</a>-->
-   <!-- <a routerLink="/signup" *ngIf="!AuthGuard.isLoggedin">Signup</a>
-    <a routerLink="/login" *ngIf="!AuthGuard.isLoggedin">Login</a>
-    <a routerLink="/timeline" *ngIf="AuthGuard.isLoggedin">Fil d'actualité</a>
-    <a routerLink="/logout" *ngIf="AuthGuard.isLoggedin" (click)="onLogout()">Se déconnecter</a>-->
-    
-  </nav>
   <router-outlet></router-outlet>
 </div>
+<footer></footer>
