--- a/groupomania/src/app/auth/signup/signup.component.scss
+++ b/groupomania/src/app/auth/signup/signup.component.scss
@@ -1,5 +1,78 @@
-form {
-    margin: 2em auto;
-    max-width: 750px;
+h1 {
+  max-width: 600px;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.container {
+  max-width: 400px;
+  margin: auto;
+}
+
+.center {
+  margin-top: 50px;
+}
+
+.confirm {
+  margin-left: 30px;
+}
+
+.example-container .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
+
+.example-right-align {
+  text-align: right;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+  display: none;
+}
+
+input.example-right-align {
+  -moz-appearance: textfield;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  .login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+    a{
+      text-decoration: none;
+      color: inherit;
+    }
+    img {
+      width: 200px;
+      height: 102px;
+      margin-bottom: 20px;
+    }
+    a {
+      align-self: center;
+    }
   }
-  
+}
+
+.inputField {
+  display: flex;
+  flex-direction: column;
+  .confirm{
+      margin: 0;
+  }
+}
+.mat-form-field{
+  width: 100%;
+}
+
+.pwdInvalid {
+  margin-bottom: 10px;
+}
