--- a/groupomania/src/app/single-post/single-post.component.scss
+++ b/groupomania/src/app/single-post/single-post.component.scss
@@ -1,15 +1,112 @@
 .example-card {
-    max-width: 800px;
-    margin: auto;
-    margin-bottom: 30px;
-  }
+  max-width: 800px;
+  margin: auto;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
 
-  .example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
+form {
+  display: contents;
+  button {
+    margin-top: 10px;
   }
-  
-  .example-full-width {
-    width: 100%;
+}
+
+.mat-card-header {
+  display: flex;
+  align-items: flex-end;
+}
+
+.count {
+  font-size: 16px;
+}
+.likecount {
+  display: flex;
+}
+
+.mat-card-content {
+  margin-left: 4px;
+  h1 {
+    margin-top: 15px;
+    margin-bottom: 0px;
   }
+  p {
+    font-size: 18px;
+  }
+}
+
+.text{
+  white-space: pre-line;
+}
+
+.btnAction {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.infoPost {
+  display: flex;
+  align-items: center;
+  position: relative;
+  .comment {
+    position: absolute;
+    right: 20px;
+  }
+  .infoLike {
+    left: 12px;
+    position: absolute;
+    display: flex;
+  }
+}
+
+.button {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+.comments {
+  p {
+    margin-top: 15px;
+  }
+}
+
+.container {
+  margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .infoPost {
+    display: flex;
+    align-items: inherit;
+    position: relative;
+    flex-direction: column;
+    .comment {
+      position: inherit;
+    }
+    .comments {
+      cursor: pointer;
+    }
+    .infoLike {
+      position: inherit;
+    }
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .btnAction {
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+}
