--- a/groupomania/src/app/timeline/timeline.component.scss
+++ b/groupomania/src/app/timeline/timeline.component.scss
@@ -1,8 +1,148 @@
 .example-card {
-    max-width: 800px;
-    margin: auto;
-    margin-bottom: 30px;
+  max-width: 800px;
+  margin: auto;
+  margin-bottom: 30px;
+  P {
+    font-size: 18px;
   }
- body {
-   background-color: #f0f2f5;
- }
+}
+
+.mat-card-header {
+  display: flex;
+  align-items: flex-end;
+}
+
+.count {
+  font-size: 16px;
+}
+.likecount {
+  display: flex;
+}
+
+.postbtn {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  button {
+    width: 100px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+
+.mat-card-content {
+  margin-left: 4px;
+  h1 {
+    margin-top: 15px;
+  }
+}
+
+.infoPost {
+  display: flex;
+  align-items: center;
+  position: relative;
+  .comment {
+    position: absolute;
+    right: 20px;
+  }
+  .comments {
+    cursor: pointer;
+  }
+  .infoLike {
+    left: 12px;
+    position: absolute;
+    display: flex;
+  }
+}
+
+.button {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.btnFilter {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  height: 51px;
+  position: relative;
+  .menuBurger {
+    position: absolute;
+    right: 0;
+  }
+}
+
+.link {
+  text-decoration: none;
+  color: inherit;
+}
+.text {
+  max-height: 200px;
+  overflow: hidden;
+  white-space: pre-line;
+}
+
+.hidden {
+  position: relative;
+}
+.more {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: -5px;
+  width: 100%;
+  margin: auto;
+  background-image: -webkit-linear-gradient(-90deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 100%);
+  background-image: -moz-linear-gradient(180deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 100%);
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 100%);
+  background-position: 50% 50%;
+  -webkit-background-origin: padding-box;
+  background-origin: padding-box;
+  -webkit-background-clip: border-box;
+  background-clip: border-box;
+  -webkit-background-size: auto auto;
+  background-size: auto auto;
+  p {
+    margin: 0;
+  }
+  .moreBtn {
+    cursor: pointer;
+  }
+}
+
+.empty {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: fit-content;
+}
+
+@media only screen and (max-width: 600px) {
+  .infoPost {
+    display: flex;
+    align-items: inherit;
+    position: relative;
+    flex-direction: column;
+    .comment {
+      position: inherit;
+    }
+    .comments {
+      cursor: pointer;
+    }
+    .infoLike {
+      position: inherit;
+    }
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  .text {
+    max-height: 400px;
+  }
+}
