--- a/groupomania/src/styles.scss
+++ b/groupomania/src/styles.scss
@@ -38,3 +38,6 @@ $frontend-theme: mat.define-light-theme((
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #f0f2f5; }
 
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
